force-app/main/default/objects/Opportunity/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Account Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>