force-app/main/default/objects/Opportunity/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Audience Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>