force-app/main/default/objects/Opportunity/fields/Advertiser_Client__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advertiser Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Advertiser Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>