force-app/main/default/objects/Opportunity/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <label>Audience Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>