force-app/main/default/objects/Opportunity/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Brand)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>