force-app/main/default/objects/Opportunity/fields/Brand_Product_Focus__c.field-meta.xml
<CustomField>
    <fullName>Brand_Product_Focus__c</fullName>
    <label>Brand Product Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Bariatric</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Hematology</fullName>
            </value>
            <value>
                <fullName>Hematology &amp; Oncology</fullName>
            </value>
            <value>
                <fullName>MD Residents</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Non-HCP</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Obstetrician-&amp;-Gynecology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Ophthamology</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Ostomy</fullName>
            </value>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Physical-Therapy</fullName>
            </value>
            <value>
                <fullName>Primary-Care</fullName>
            </value>
            <value>
                <fullName>Primary-Care-Physicians</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Pulmonology</fullName>
            </value>
            <value>
                <fullName>Rheumatology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>