force-app/main/default/objects/Opportunity/fields/Brand_Table__c.field-meta.xml
<CustomField>
    <fullName>Brand_Table__c</fullName>
    <label>Brand Table</label>
    <length>20</length>
    <type>Text</type>
</CustomField>