force-app/main/default/objects/Opportunity/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>