force-app/main/default/objects/Opportunity/fields/Creative_Type__c.field-meta.xml
<CustomField>
    <fullName>Creative_Type__c</fullName>
    <label>Creative Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>