force-app/main/default/objects/Opportunity/fields/Demographic__c.field-meta.xml
<CustomField>
    <fullName>Demographic__c</fullName>
    <label>Demographic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>