force-app/main/default/objects/Opportunity/fields/KPI_Goal__c.field-meta.xml
<CustomField>
    <fullName>KPI_Goal__c</fullName>
    <label>KPI Goal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>