force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cost too High</fullName>
            </value>
            <value>
                <fullName>Audience too Small</fullName>
            </value>
            <value>
                <fullName>Went to Competitor</fullName>
            </value>
            <value>
                <fullName>Budget on Hold</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>