force-app/main/default/objects/Opportunity/fields/Need_Creative_Assets__c.field-meta.xml
<CustomField>
    <fullName>Need_Creative_Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Creative Assets</label>
    <type>Checkbox</type>
</CustomField>