force-app/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <errorMessage>Contact should be under the same account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Brand__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.SubClient_or_Manufacturer__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>