force-app/main/default/objects/Opportunity/fields/Primary_KPI__c.field-meta.xml
<CustomField>
    <fullName>Primary_KPI__c</fullName>
    <label>Primary KPI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>Clicks</fullName>
            </value>
            <value>
                <fullName>Reach/High Match</fullName>
            </value>
            <value>
                <fullName>Deliver in FULL</fullName>
            </value>
            <value>
                <fullName>Video Completions</fullName>
            </value>
            <value>
                <fullName>Audio Completions</fullName>
            </value>
            <value>
                <fullName>CTR - 0.15%</fullName>
            </value>
            <value>
                <fullName>Time Spent/Bounce Rate/Pageviews</fullName>
            </value>
            <value>
                <fullName>CTR + Viewability</fullName>
            </value>
            <value>
                <fullName>CPA + CTR</fullName>
            </value>
            <value>
                <fullName>CTR + Reach</fullName>
            </value>
            <value>
                <fullName>CTR/Landing Page</fullName>
            </value>
            <value>
                <fullName>CPC + Reach/Match Rates</fullName>
            </value>
            <value>
                <fullName>Views - Landing Page</fullName>
            </value>
            <value>
                <fullName>CTR + Deliverability</fullName>
            </value>
            <value>
                <fullName>CTR</fullName>
            </value>
            <value>
                <fullName>CPC + CPA</fullName>
            </value>
            <value>
                <fullName>CPA + CPL</fullName>
            </value>
            <value>
                <fullName>VCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>