force-app/main/default/objects/Opportunity/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Brand-Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>Recruit</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>RX</fullName>
            </value>
            <value>
                <fullName>Study</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>Vitamins-&amp;-Supplements</fullName>
                <label>Vitamins &amp; Supplements</label>
            </value>
            <value>
                <fullName>Medical_Device</fullName>
                <label>Medical Device</label>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
                <isActive>false</isActive>
                <label>Association</label>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
                <isActive>false</isActive>
                <label>Biotechnology</label>
            </value>
            <value>
                <fullName>Business-Service</fullName>
                <isActive>false</isActive>
                <label>Business-Service</label>
            </value>
            <value>
                <fullName>CME</fullName>
                <isActive>false</isActive>
                <label>CME</label>
            </value>
            <value>
                <fullName>Cannabis</fullName>
                <isActive>false</isActive>
                <label>Cannabis</label>
            </value>
            <value>
                <fullName>Clinical-Trial</fullName>
                <isActive>false</isActive>
                <label>Clinical-Trial</label>
            </value>
            <value>
                <fullName>Concierge</fullName>
                <isActive>false</isActive>
                <label>Concierge</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <isActive>false</isActive>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>DTE</fullName>
                <isActive>false</isActive>
                <label>DTE</label>
            </value>
            <value>
                <fullName>Diagnostic</fullName>
                <isActive>false</isActive>
                <label>Diagnostic</label>
            </value>
            <value>
                <fullName>Education</fullName>
                <isActive>false</isActive>
                <label>Education</label>
            </value>
            <value>
                <fullName>Event</fullName>
                <isActive>false</isActive>
                <label>Event</label>
            </value>
            <value>
                <fullName>Event-Series</fullName>
                <isActive>false</isActive>
                <label>Event-Series</label>
            </value>
            <value>
                <fullName>Financial-Product</fullName>
                <isActive>false</isActive>
                <label>Financial-Product</label>
            </value>
            <value>
                <fullName>General</fullName>
                <isActive>false</isActive>
                <label>General</label>
            </value>
            <value>
                <fullName>Healthcare-Insurance</fullName>
                <isActive>false</isActive>
                <label>Healthcare-Insurance</label>
            </value>
            <value>
                <fullName>Healthcare-Practice</fullName>
                <isActive>false</isActive>
                <label>Healthcare-Practice</label>
            </value>
            <value>
                <fullName>Healthcare-Services</fullName>
                <isActive>false</isActive>
                <label>Healthcare-Services</label>
            </value>
            <value>
                <fullName>Healthcare-Store</fullName>
                <isActive>false</isActive>
                <label>Healthcare-Store</label>
            </value>
            <value>
                <fullName>Healthcare-Tech</fullName>
                <isActive>false</isActive>
                <label>Healthcare-Tech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>