force-app/main/default/objects/Opportunity/fields/Regional_Target__c.field-meta.xml
<CustomField>
    <fullName>Regional_Target__c</fullName>
    <label>Regional Target</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AK</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>KS</fullName>
            </value>
            <value>
                <fullName>KY</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>MO</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>