force-app/main/default/objects/Opportunity/fields/Request_for_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request for Proposal</label>
    <type>Checkbox</type>
</CustomField>