force-app/main/default/objects/Opportunity/fields/Secondary_KPI_Goal__c.field-meta.xml
<CustomField>
    <fullName>Secondary_KPI_Goal__c</fullName>
    <label>Secondary KPI Goal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>