force-app/main/default/objects/Opportunity/fields/Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name__c</fullName>
    <description>Segment Info</description>
    <label>Segment Name</label>
    <type>TextArea</type>
</CustomField>