force-app/main/default/objects/Opportunity/fields/Signers_Email__c.field-meta.xml
<CustomField>
    <fullName>Signers_Email__c</fullName>
    <formula>IF( RecordType.Name = &apos;Adfire Health Marketing&apos; , &apos;lilia@adfirehealth.com&apos;, &apos;agentile@katondirect.com&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signer’s Email</label>
    <type>Text</type>
</CustomField>