force-app/main/default/objects/Opportunity/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>