force-app/main/default/objects/Opportunity/fields/Strategy_Package__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Package__c</fullName>
    <label>Strategy</label>
    <length>234</length>
    <type>Text</type>
</CustomField>