force-app/main/default/objects/Opportunity/fields/Sub_Audience__c.field-meta.xml
<CustomField>
    <fullName>Sub_Audience__c</fullName>
    <label>Sub Audience</label>
    <length>200</length>
    <type>Text</type>
</CustomField>