force-app/main/default/objects/Opportunity/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <label>Sub Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>