force-app/main/default/objects/Opportunity/fields/SubClient_or_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>SubClient_or_Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubClient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (SubClient or Manufacturer)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>