force-app/main/default/objects/Opportunity/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <length>20</length>
    <type>Text</type>
</CustomField>