force-app/main/default/objects/Opportunity/fields/Target_Geo_Other__c.field-meta.xml
<CustomField>
    <fullName>Target_Geo_Other__c</fullName>
    <label>Target Geo Other</label>
    <length>200</length>
    <type>Text</type>
</CustomField>