force-app/main/default/objects/Opportunity/fields/Target_List__c.field-meta.xml
<CustomField>
    <fullName>Target_List__c</fullName>
    <label>Target List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>