force-app/main/default/objects/Opportunity/fields/Targeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Type__c</fullName>
    <label>Targeting Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross Device</fullName>
            </value>
            <value>
                <fullName>Retargeting</fullName>
            </value>
            <value>
                <fullName>Contextual</fullName>
            </value>
            <value>
                <fullName>Endemic</fullName>
            </value>
            <value>
                <fullName>Geofencing</fullName>
            </value>
            <value>
                <fullName>Geo Targeting</fullName>
            </value>
            <value>
                <fullName>Health Sites</fullName>
            </value>
            <value>
                <fullName>High Impact</fullName>
            </value>
            <value>
                <fullName>In App</fullName>
            </value>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Reporting access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>