force-app/main/default/objects/Opportunity/fields/Targeting_Types__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Types__c</fullName>
    <label>Targeting Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>CTV</fullName>
            </value>
            <value>
                <fullName>Custom Content</fullName>
            </value>
            <value>
                <fullName>DOOH</fullName>
            </value>
            <value>
                <fullName>Retargeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>