force-app/main/default/objects/Opportunity/fields/Tracked_KPI__c.field-meta.xml
<CustomField>
    <fullName>Tracked_KPI__c</fullName>
    <label>Tracked KPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>