force-app/main/default/objects/Opportunity/recordTypes/Adfire_Health_Marketing.recordType-meta.xml
<RecordType>
    <fullName>Adfire_Health_Marketing</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Adfire Health Marketing</label>
</RecordType>