force-app/main/default/objects/Opportunity/recordTypes/Adfire_Health_Recruit.recordType-meta.xml
<RecordType>
    <fullName>Adfire_Health_Recruit</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Adfire Health Recruit</label>
</RecordType>